[package]
name = "hex-linear-lift-direct-control-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
prost = "0.12"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
anyhow = "1.0.91"
hyper-tungstenite = "0.17.0"
tokio-tungstenite = "*"
log = { version = "0.4.22", features = ["std"] }
tokio-util = "0.7.12"
lazy_static = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }


[build-dependencies]
prost-build = { version = "0.12.4" }
chrono = "0.4.40"
